# ME2029

./: .env.example  HOWTO.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_signals_job_runs.py  0003_company_signals.py  0003_connector_fields.py  0003_connector_keys.py  0004_recommendations.py
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  seed.py  session.py
backend/app/jobs/: scheduler.py
backend/app/models/: company_signal.py  config.py  job.py  network.py  opportunity.py  profile.py  recommendation.py  signal.py  strategy.py
backend/app/schemas/: company_signal.py  network.py  opportunity.py  profile.py  recommendation.py  signal.py  strategy.py
backend/app/services/: company_intelligence.py  connectors.py  decision_engine.py  events.py  ingestion.py  scoring.py  signals.py  strategy.py
backend/app/tests/: test_company_intelligence.py  test_connectors.py  test_decision_engine.py  test_health.py  test_ingestion.py  test_recommendations_api.py  test_scheduler.py  test_scoring.py  test_signals.py
frontend/: package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/execution/: page.tsx
frontend/src/components/: ConnectionBadge.tsx  Nav.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: api.test.mjs  api.ts
(+4 files in other folders)
